# claude-code-qq-bridge

./: .env.example  .gitignore  LICENSE  README.md  claude-code-qq-bridge.py  claude-conversation-monitor.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
src/claude_code_qq_bridge/: __init__.py  __main__.py  bridge.py
